--- a/mobile_preprocessors.html
+++ b/mobile_preprocessors.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="mobile.css">
+<link rel="stylesheet" type="text/css" href="mobile_preprocessors.css">
 </head>
 <body>
 
